--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ eleventyNavigation:
     <!-- ============================================ -->
     <!--                    Hero                      -->
     <!-- ============================================ -->
-
+    <!-- Dave -->
     <section id="hero">
         <div class="cs-container">
             <div class="cs-flex-group">
